// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Decentraland UI - Coverage Tests Button Actions 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      className="ui primary button"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "minWidth": 190,
        }
      }
    >
      Vote Now
    </button>
    <button
      className="ui button"
      onClick={[Function]}
      role="button"
      style={
        Object {
          "minWidth": 190,
        }
      }
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Button Primary 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      className="ui primary button"
      onClick={[Function]}
      role="button"
    >
      Vote Now
    </button>
    <button
      className="ui primary disabled button"
      disabled={true}
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      Vote Now
    </button>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Button Secondary 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      className="ui button"
      onClick={[Function]}
      role="button"
    >
      Cancel
    </button>
    <button
      className="ui disabled button"
      disabled={true}
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Button Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      className="ui massive primary button"
      onClick={[Function]}
      role="button"
    >
      Massive
    </button>
    <button
      className="ui huge primary button"
      onClick={[Function]}
      role="button"
    >
      Huge
    </button>
    <button
      className="ui large primary button"
      onClick={[Function]}
      role="button"
    >
      Large
    </button>
    <button
      className="ui medium primary button"
      onClick={[Function]}
      role="button"
    >
      Medium
    </button>
    <button
      className="ui small primary button"
      onClick={[Function]}
      role="button"
    >
      Small
    </button>
    <button
      className="ui tiny primary button"
      onClick={[Function]}
      role="button"
    >
      Tiny
    </button>
    <button
      className="ui mini primary button"
      onClick={[Function]}
      role="button"
    >
      Mini
    </button>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Header Subheader + Header 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="ui sub header"
    >
      Votes
    </div>
    <div
      className="ui large header"
    >
      20,212
    </div>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Mana Black 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="ui small header dcl mana black"
    >
      <i
        className="symbol"
      >
        ⏣
      </i>
      20
    </div>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Mana In a paragraph 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <p>
      You have voted with 
      <div
        className="ui small header dcl mana"
      >
        <i
          className="symbol"
        >
          ⏣
        </i>
        1,000
      </div>
      .
    </p>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Mana Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="ui huge header dcl mana"
    >
      <i
        className="symbol"
      >
        ⏣
      </i>
      1,000
    </div>
    <div
      className="ui large header dcl mana"
    >
      <i
        className="symbol"
      >
        ⏣
      </i>
      1,000
    </div>
    <div
      className="ui medium header dcl mana"
    >
      <i
        className="symbol"
      >
        ⏣
      </i>
      1,000
    </div>
    <div
      className="ui small header dcl mana"
    >
      <i
        className="symbol"
      >
        ⏣
      </i>
      1,000
    </div>
    <div
      className="ui tiny header dcl mana"
    >
      <i
        className="symbol"
      >
        ⏣
      </i>
      1,000
    </div>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Mana Symbol + MANA 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="ui header dcl mana"
    >
      <i
        className="symbol"
      >
        ⏣
      </i>
      MANA
    </div>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Mana Symbol 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="ui header dcl mana"
    >
      <i
        className="symbol"
      >
        ⏣
      </i>
    </div>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Mana Total voted 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="ui sub header"
    >
      Total voted
    </div>
    <div
      className="ui large header dcl mana"
    >
      <i
        className="symbol"
      >
        ⏣
      </i>
      1,235,345
    </div>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Radio Checked 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="ui checked radio checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="radio"
      />
      <label>
        Yes
      </label>
    </div>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Radio Options 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="ui checked radio checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={true}
        className="hidden"
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="radio"
      />
      <label>
        Yes
      </label>
    </div>
    <div
      className="ui radio checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="radio"
      />
      <label>
        No
      </label>
    </div>
    <div
      className="ui radio checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="radio"
      />
      <label>
        Abstain
      </label>
    </div>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Radio Unchecked 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="ui radio checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        onClick={[Function]}
        readOnly={true}
        tabIndex={0}
        type="radio"
      />
      <label>
        No
      </label>
    </div>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Stats Poll Results 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <span
      className="dcl stats"
    >
      <div
        className="ui sub header"
      >
        Token
      </div>
      <div
        className="ui large header dcl mana"
      >
        <i
          className="symbol"
        >
          ⏣
        </i>
        MANA
      </div>
    </span>
    <span
      className="dcl stats"
    >
      <div
        className="ui sub header"
      >
        Total Voted
      </div>
      <div
        className="ui large header dcl mana"
      >
        <i
          className="symbol"
        >
          ⏣
        </i>
        1,235,345
      </div>
    </span>
    <span
      className="dcl stats"
    >
      <div
        className="ui sub header"
      >
        Total Votes
      </div>
      <div
        className="ui large header"
      >
        20
      </div>
    </span>
    <span
      className="dcl stats"
    >
      <div
        className="ui sub header"
      >
        Parcial Result
      </div>
      <div
        className="ui large header"
      >
        Yes
      </div>
    </span>
    <span
      className="dcl stats"
    >
      <div
        className="ui sub header"
      >
        Time Left
      </div>
      <div
        className="ui large header"
      >
        1 week
      </div>
    </span>
  </div>
</div>
`;

exports[`Decentraland UI - Coverage Tests Tooltip Hover to show 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": 0,
      "display": "flex",
      "left": 0,
      "overflow": "auto",
      "position": "fixed",
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "maxWidth": 100,
        }
      }
    >
      <div
        className="ui large header dcl mana"
        data-balloon="MANA"
        data-balloon-pos="up"
      >
        <i
          className="symbol"
        >
          ⏣
        </i>
      </div>
    </div>
  </div>
</div>
`;
